--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -191,7 +191,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="@dimen/padding_middle"
-                                    android:drawableStart="@drawable/calendar"
+                                    android:drawableStart="@drawable/time"
                                     android:drawablePadding="@dimen/padding_small"
                                     android:textColor="?textColorSecondary"
                                     app:layout_constraintBottom_toBottomOf="@id/budget"
