--- a/app/src/main/res/layout/fragment_pager_project_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_project_overview.xml
@@ -25,7 +25,7 @@
         android:textColor="?textColorPrimary"
         android:background="@drawable/type"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="1 час 50 минут назад" />
+        tools:text="час назад" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/skillList"
