[*] Fix hard HTML text render

--- a/app/src/main/res/layout/fragment_pager_employer_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_employer_overview.xml
@@ -231,6 +231,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/overviewFragmentContainer"
                     android:padding="@dimen/padding_middle">
 
 
