--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -59,6 +59,11 @@
         android:checkableBehavior="none">
 
         <item
+            android:id="@+id/menu_buy_premium"
+            app:actionLayout="@layout/item_menu_buy_premium"
+            tools:ignore="MenuTitle" />
+
+        <item
             android:id="@+id/menu_settings"
             android:icon="@drawable/settings"
             android:title="@string/settings" />
