--- a/app/src/main/res/layout/activity_employer_detail.xml
+++ b/app/src/main/res/layout/activity_employer_detail.xml
@@ -158,7 +158,7 @@
                                     android:layout_marginStart="@dimen/padding_middle"
                                     android:layout_marginTop="@dimen/padding_standart"
                                     android:layout_marginEnd="@dimen/padding_middle"
-                                    app:constraint_referenced_ids="rating,voteup,votedown"
+                                    app:constraint_referenced_ids="rating,voteup,votedown,arbitrages"
                                     app:flow_horizontalBias="0"
                                     app:flow_horizontalGap="@dimen/padding_small"
                                     app:flow_horizontalStyle="packed"
@@ -206,6 +206,19 @@
                                     android:gravity="center"
                                     android:textColor="?textColorSecondary"
                                     tools:text="0" />
+
+                                <TextView
+                                    android:id="@+id/arbitrages"
+                                    style="@style/TextStyle.Type"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:drawableStart="@drawable/arbitrage_small"
+                                    android:drawablePadding="@dimen/padding_small"
+                                    android:ellipsize="end"
+                                    android:gravity="center"
+                                    android:textColor="?textColorSecondary"
+                                    tools:text="2" />
 
                                 <androidx.appcompat.widget.AppCompatImageView
                                     android:id="@+id/verified"
