--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -49,6 +49,8 @@
     </string-array>
 
     <string-array name="pref_notifications_period_entries">
+        <item>Every 5 minutes</item>
+        <item>Every 10 minutes</item>
         <item>Every 15 minutes</item>
         <item>Every half hour</item>
         <item>Once an hour</item>
@@ -58,6 +60,8 @@
     </string-array>
 
     <string-array name="pref_notifications_interval_values">
+        <item>5</item>
+        <item>10</item>
         <item>15</item>
         <item>30</item>
         <item>60</item>
